--- a/NutiteqTestGit/AndroidManifest.xml
+++ b/NutiteqTestGit/AndroidManifest.xml
@@ -3,10 +3,18 @@
     package="com.example.nutiteqtestgit"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="19" />
+
 
     <application
         android:allowBackup="true"
